--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
 
-include: [".well-known", "chain-reaction/.well-known"]
+include: [".well-known", "chain-reaction-game/.well-known"]
